gcc/testsuite/g++.dg/modules/class-2_b.C
// { dg-additional-options "-fmodules-ts" }
import One;

int z = sizeof (Bob::X); // { dg-error "not a member of .Bob." }
